k8s/wilde-destination-rule-mlts.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default-wilde-istio-client-mtls"
spec:
  host: wilde.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
