k8s/wilde-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - wilde-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: wilde.default.svc.cluster.local   
        port:
          number: 8443
